# raylib-setup

./: .clangd  CMakeLists.txt
.cache/clangd/index/: cgltf.h.26DF15483CE7A45D.idx  cocoa_init.m.F1A753F3AD4BFD46.idx  cocoa_joystick.h.DBAD6C1174170DE5.idx  cocoa_joystick.m.6667306D2A3FD257.idx  cocoa_monitor.m.5ED347956B1AD7D2.idx  cocoa_platform.h.ACAF6EF1C5C482A2.idx  cocoa_time.c.169B600788A9439F.idx  cocoa_time.h.741FE2D220F69613.idx  cocoa_window.m.AC8DED1640C61CA2.idx  config.h.3908DD9B919B7112.idx  context.c.62373A35F23D999E.idx  dr_mp3.h.80D64E662AD42C8E.idx  dr_wav.h.E55A393CF724F8B8.idx  egl_context.c.C291CB13814AC383.idx  glad.h.9E129BB1738A7F7D.idx  glfw3.h.592E93D63259CCB5.idx  glfw3native.h.7AC34869331002C3.idx  init.c.CD47C84AB922D3CA.idx  input.c.08B85BB92EA513D5.idx  internal.h.5ACDBE08D9CC83FB.idx  jar_mod.h.7337D050816353C1.idx  jar_xm.h.AEB983ADFDBA38A8.idx  m3d.h.05F1B258487D6239.idx  main.c.9EF50CF9B2099814.idx  mappings.h.53A5DB8AD7864C93.idx  miniaudio.h.5B40DDD7C881412A.idx  monitor.c.78BA3BF038F7CC38.idx  nsgl_context.m.CFB8208376F76B3E.idx  null_init.c.B458D4BDEE9EFF9E.idx  null_joystick.c.94CA2A103DF19D40.idx  null_joystick.h.61A3B26745165AE0.idx  null_monitor.c.6281569568E19C90.idx  null_platform.h.2A2377178D759A71.idx  null_window.c.7E2786A952E63D3F.idx  osmesa_context.c.20094BDB47E40B6B.idx  par_shapes.h.ADF0BAF901F92B54.idx  platform.c.5ACFEDF4E5D5F159.idx  platform.h.E00387AB18680FD8.idx  posix_module.c.A21D47E27055AEE5.idx  posix_thread.c.9AC9B14910D37D9B.idx  (+33 more)
src/: CMakeLists.txt  main.c
